Views Calendar 5.x
==================

Version 5.2 dev
===============

- Rework html of Year view so month titles will match block view month title for easier css themeing.
- #323265 Add year as well as month to calendar titles.
- #319344 Add 'empty' class and updated css styles provided by MothersClick.com.
- #319344 Add method of truncating title and other fields in calendar cells.
- #174580 Add min/max year setting to Date argument and set Page Not Found outside that range.
- #174580 Add rel=nofollow to back/next links.
- #319344 Add method of limiting the number of events that display in calendar cells.
- #310262 Add missing parameter to calendar_build_nodes() in calendar ical.
- #314682 Add missing url() in jcalendar js code.
- #311839 Fix permissions to see header and empty text.
- #313161 Use date_id as iCal UID to be sure it is unique.
- #306328 Fix one more embedded link for the week number.
- #303537 Display:relative should be position:relative.
- #313538 Fix color typo in calendar.css.
- #306328 Fix week links.

Version 5.2.3
===============

- #306128 Make sure non-calendar views have the right base calendar links.
- #292061 Validation for grouped handlers was showing non-cck handlers as invalid.
- #305677 Preserve sort order in non-calendar views, including imported feeds.
- #243172 Fix handling of navigation on non-calendar view with calendar arguments.
- #296735 Make sure 'day' links use the leading zeros for consistency.
- #196611 Add 'empty' text to header when there are no results.
- #294469 Get rid of redundant timezone conversion that showed dates without timezone conversion in UTC.
- #304948 Make sure new method of handling blocks and embeds creates right 'day' link.
- #304948 Make sure new method of handling blocks and embeds with no default values will pass is_calendar testing in views_pre_view.
- #304762 Add missing folders for translations.

Version 5.2.2
===============
- Critical bugfix, fix possible undefined $item->$tz.

Version 5.2.1